<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpa_header1" />

            <Spinner
                android:id="@+id/lineThicknessSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ex1_line_thickness_array" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpa_header2" />

            <RadioGroup
                android:id="@+id/lineColorRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/redLineColorRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ex1_red_line_col_radio_btn" />

                <RadioButton
                    android:id="@+id/yellowLineColorRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ex1_cyan_line_col_radio_btn" />

                <RadioButton
                    android:id="@+id/cyanLineColorRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ex1_yellow_line_col_radio_btn" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpa_header3" />

            <ImageButton
                android:id="@+id/upArrowKeyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/leftArrowKeyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/screen_background_light_transparent"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

                <ImageButton
                    android:id="@+id/rightArrowKeyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/screen_background_light_transparent"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/downArrowKeyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/clearCanvasBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpa_btn_txt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xPosTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/yPosTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewForDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
</LinearLayout>
